--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js"
+     "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
